# CurrencyConverterAPI

./: .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
src/: main.py
src/business_logic/: __init__.py
src/business_logic/domain/: __init__.py  currency.py  user.py
src/business_logic/repositories/: __init__.py  currency_converter_repository.py  user_repository.py
src/business_logic/services/: __init__.py  currency_converter_service.py  user_register_service.py
src/data_access/: __init__.py
src/data_access/data_sources/: __init__.py  postgresql_data_source.py
src/data_access/entities/: __init__.py  exchange_rates_data_api_entities.py  user_entities.py
src/data_access/integration/: __init__.py  exchange_rates_data_api.py
src/data_access/repositories_implemented/: __init__.py  currency_converter_repository_implemented.py  user_repository_implemented.py
src/dependency_injection/: __init__.py  business_logic.py  data_access.py  settings.py
src/presentation/: __init__.py
src/presentation/api/: __init__.py  api_factory.py
src/presentation/api/routes/auth/: login_endpoint.py  register_endpoint.py
src/presentation/api/routes/currency_conversion/: convert_currency_endpoint.py
