[tool.poetry]
name = "currencyconverterapi"
version = "1.0.0"
description = "Currency Converter API"
authors = ["Jesus Roncal <jesusroncal94@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
psycopg2-binary = "^2.9.9"
sqlmodel = "^0.0.18"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
poethepoet = "^0.26.1"
pre-commit = "^3.7.1"

[tool.poe.tasks]
format = {cmd = "pre-commit run --all-files", help = "Static code analyzer with best practices before committing a change"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
